Fix breadcrumb white space for new chrome layout on rec details

--- a/src/SmartComponents/Recs/Details.scss
+++ b/src/SmartComponents/Recs/Details.scss
@@ -1,7 +1,7 @@
 @import '~@redhat-cloud-services/frontend-components-utilities/styles/all';
 
 .pageHeaderOverride {
-  padding-bottom: 0px;
+  padding-bottom: .1px;
 }
 
 .cardOverride {
